# router/app.go
@@ -18,5 +18,6 @@ func Router() *gin.Engine {
 	r.GET("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
+	r.POST("/user/login", service.Login)
 	return r // listen and serve on 0.0.0.0:8080 (for windows "localhost:8080")
 }
